<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".RadiusActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_gravity="left"
            android:clickable="true"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/backicon">
        </ImageView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/banner"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="concert"
            app:srcCompat="@drawable/banner" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <View
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clipToOutline="true"
            android:background="@drawable/rounded_corner"
            android:orientation="horizontal"
            android:layout_weight="1">
            <EditText
                android:id="@+id/enterLocation"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:imeOptions="actionGo"
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGrey"
                android:hint="Enter zipcode, city, or address"/>
        </LinearLayout>

        <view
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="15dp"
            android:clipToOutline="true"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/colorSecondary"
            class="android.widget.LinearLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/searchButton"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="7dp"
                android:layout_gravity="center"
                style="@style/MyStyle"
                android:text="Search"/>

        </view>



    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/textColorPrimary"
                android:text="Set concert Radius"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/distanceDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="15 miles"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_marginTop="10dp"
            android:progress="15"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/darkGrey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="mileSelect"
            android:max="100" />
    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:clipToOutline="true"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/colorSecondary"
        class="android.widget.LinearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmButton"
            android:clickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/MyStyle"
            android:text="Confirm"/>

    </view>


</androidx.appcompat.widget.LinearLayoutCompat>