...
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-20dp"
                android:paddingBottom="40dp"
                android:paddingTop="30dp"
                android:background="@drawable/rounded_corner"
...
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="Signup"
                    style="@style/MyStyle" />

                <TextView
                    android:id="@+id/guestButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:padding="5dp"
                    android:text="Continue as guest"/>

                <Button
                    android:id="@+id/main_payment_btn"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
...
