...
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/menuIcon"
            android:clickable="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:scaleType="fitXY"
...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/mapIcon"
                android:clickable="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="7dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
...
