<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DeleteUsers">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.3">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/cardView"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rifflogolight"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="29dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/backicon"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-7dp"
                    android:text="Create Group"
                    android:textColor="@color/my_primary"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    app:layout_constraintTop_toTopOf="@id/back"
                    tools:ignore="MissingConstraints,NotSibling" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter your group details below"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Group Name"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groupName"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/chat_space_groups"
                android:ems="10"
                android:hint="Enter Group Name"
                android:inputType="text"
                android:padding="10dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Group Bio"
                android:layout_marginLeft="8dp"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groupBio"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/chat_space_groups"
                android:ems="10"
                android:hint="Enter Group Bio (Max 100 characters)"
                android:inputType="text"
                android:padding="10dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4-Digit Passcode"
                android:layout_marginLeft="8dp"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passcode"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/chat_space_groups"
                android:ems="10"
                android:hint="Enter Passcode"
                android:inputType="number"
                android:maxLength="4"
                android:password="true"
                android:padding="10dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createGroup"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="Create Group"
                style="@style/MyStyle"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp"></Space>







        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
